    - base_int_to_digit/3, det_base_int_to_digit/2
    - binary_digit_to_int/2, det_binary_digit_to_int/1
    - octal_digit_to_int/2, det_octal_digit_to_int/1
    - decimal_digit_to_int/2, det_decimal_digit_to_int/1
    - hex_digit_to_int/2, det_hex_digit_to_int/1
    - base_digit_to_int/3, det_base_digit_to_int/2
    - is_leading_surrogate/1, is_trailing_surrogate/1

  The following predicates in the char module have been deprecated and will
  either be removed or have their semantics changed in a future release:

    - is_hex_digit/2
    - int_to_hex_char/2
    - digit_to_int/2
    - int_to_digit/2
    - det_int_to_digit/1, det_int_to_digit/2

  NOTE: existing code that calls char.digit_to_int/2 assuming that it will
  only succeed for decimal digits (0-9) may be broken.

* Float special values, NaNs and Infinities, are now converted to strings in
  a way that is backend- and grade-independent.  (Bug #348)

* string.base_digit_to_int/3 and string.det_base_digit_to_int/2 now check
  for overflow and underflow in all bases, not only base 10.

* We have reduced the memory allocated by string.to_lower and string.to_upper.

* The following classification predicates have been added to the float module:

   - is_finite/1
   - is_zero/1
   - is_infinite/1        (synonym for the existing is_inf/1 predicate)
   - is_nan_or_infinite/1 (synonym for the existing is_nan_or_inf/1 predicate)

  The following function has been added to the float module:

   - infinity/0

* The following predicates and functions have been added to the integer module:

   - from_string/2
   - from_base_string/3
   - to_int/2
   - det_to_int/1
   - to_base_string/2
   - negative_one/0, two/0, ten/0
   - is_zero/1

  The following functions in the integer module have been deprecated:

   - from_string/1
   - from_base_string/2
   - int/1

* The following predicates and functions have been added to the require module:

   - error/2
   - func_error/2
